# agents

./: .gitignore  AGENTS.md  CLAUDE.md  mcp_config.json  mcp_config.json.example  prek.toml  pyproject.toml  rules.md  skills-lock.json
.claude-plugin/: marketplace.json
commands/: make-tests.md  resume-session.md
commands/opsx/: archive.md  continue.md
commands/unit-testing/: test-generate-from-diff.md
commands/universal/: prompt-optimize.md
plugin-skill-ports/agent-llm-engineer/: SKILL.md
plugin-skill-ports/agent-llm-prompt-engineer/: SKILL.md
plugin-skill-ports/agent-llm-vector-database-engineer/: SKILL.md
plugin-skill-ports/llm-assistant/: SKILL.md
plugin-skill-ports/llm-langchain-agent/: SKILL.md
plugin-skill-ports/llm-prompt-optimize/: SKILL.md
rules/: global_rules.md
rules/claude-code/: code-review-graph.md  context-mode.md  context7.md  python-standards.md  python-tests.md  tool-use.md
rules/copilot/: python-standards.md  python-tests.md
rules/copilot-jetbrains/: global-copilot-instructions.md
rules/copilot-vscode/: context7.md
rules/universal/: context-mode.md  context7.md  global.md  global_rules.md
rules/windsurf/: global_rules.md
scripts/: rules.py
skills/: modern-python
skills/agent-python-pro/: SKILLS.md
skills/basic-memory-assistant/: SKILL.md
skills/claude-plugin-to-skill/: SKILL.md
skills/geekbot-weekly-update/: SKILL.md
skills/integration-test-suite/: SKILL.md
skills/openspec-jira/: SKILL.md
skills/package-plugin/: SKILL.md
skills/plugin-to-skill/: SKILL.md
tests/: test_rules.py
(+137 files in other folders)
