[project]
name = "agents"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "click",
    "pyyaml",
    "questionary",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.11",
]

[project.scripts]
rules = "scripts.rules:cli"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
